# fort

./: .replit  Check update dev.bat  Check update.bat  INSTALL IFNOTWORK.bat  INSTALL.bat  README.md  README_EN.md  README_ES.md  RUN.bat  auto-updater.py  commands.json  config.json  index  index.py  pyproject.toml  replies.json  requirements.txt  start.sh
lang/: en.json  es.json  ja.json
templates/: boot_switch.html  clients_viewer.html  commands_editor.html  config_editor.html  config_editor_new.html  login.html  main.html  not_found.html  party_viewer.html  replies_editor.html
