[tool.poetry]
name = "Fortnite-LobbyBot"
version = "0.1.0"
description = ""
authors = ["gomashio1596","pdf114514"]

[tool.poetry.dependencies]
python = "^3.7"
fortnitepy = "^2.2.1"
"discord.py" = "^1.3.4"
requests = "^2.24.0"
crayons = "^0.3.1"
jaconv = "^0.2.4"
Jinja2 = "^2.11.2"
sanic = "^20.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
